[tool.poetry]
name = "krlparser"
version = "0.1.0"
description = "a parser for krl"
authors = ["jonathandavis805 <jonathan.davis96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parse = "krlparser.parser:main"
